--- a/src/MannsBlog/Views/Root/Index.cshtml
+++ b/src/MannsBlog/Views/Root/Index.cshtml
@@ -16,6 +16,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using System.Globalization
+@using MannsBlog.Models;
 @inject MannsBlog.Services.DataProviders.CalendarProvider _appearances
 @inject IViewLocalizer _localizer
 @model BlogResult
