--- a/src/MannsBlog/Views/Shared/_Pager.cshtml
+++ b/src/MannsBlog/Views/Shared/_Pager.cshtml
@@ -14,59 +14,60 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *@
+@using MannsBlog.Models;
 @model BlogResult
 @{
-  // Pager
-  var windowSize = 4;
-  var firstPage = Model.CurrentPage - windowSize < 1 ? 1 : Model.CurrentPage - windowSize;
-  var lastPage = Model.CurrentPage + windowSize > Model.TotalPages ? Model.TotalPages : Model.CurrentPage + windowSize;
+    // Pager
+    var windowSize = 4;
+    var firstPage = Model.CurrentPage - windowSize < 1 ? 1 : Model.CurrentPage - windowSize;
+    var lastPage = Model.CurrentPage + windowSize > Model.TotalPages ? Model.TotalPages : Model.CurrentPage + windowSize;
 }
 <nav>
-  <ul class="flex space-x-4 text-right">
-    @if (Model.CurrentPage != 1)
-    {
-      <li>
-        <a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="1" aria-label="First">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">First</span>
-        </a>
-      </li>
-    }
-    @if (firstPage - 10 > 1)
-    {
-      <li>
-        <a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@(firstPage - 10)" aria-label="Previous Pager">
-          <span aria-hidden="true">&lsaquo;</span>
-          <span class="sr-only">Previous Pager</span>
-        </a>
-      </li>
-    }
-    @for (int x = firstPage; x < Model.CurrentPage; ++x)
-    {
-      <li><a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@x">@x</a></li>
-    }
-    <li class="page-item active"><a class="page-link">@Model.CurrentPage</a></li>
-    @for (int x = Model.CurrentPage + 1; x <= lastPage; ++x)
-    {
-      <li><a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@x">@x</a></li>
-    }
-    @if (lastPage + 10 < Model.TotalPages)
-    {
-      <li>
-        <a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@(lastPage + 10)" aria-label="Next Pager">
-          <span aria-hidden="true">&rsaquo;</span>
-          <span class="sr-only">Next Pager</span>
-        </a>
-      </li>
-    }
-    @if (Model.CurrentPage != Model.TotalPages)
-    {
-      <li>
-        <a aria-label="Last" asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@Model.TotalPages">
-          <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Last</span>
-        </a>
-      </li>
-    }
-  </ul>
+    <ul class="flex space-x-4 text-right">
+        @if (Model.CurrentPage != 1)
+        {
+            <li>
+                <a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="1" aria-label="First">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">First</span>
+                </a>
+            </li>
+        }
+        @if (firstPage - 10 > 1)
+        {
+            <li>
+                <a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@(firstPage - 10)" aria-label="Previous Pager">
+                    <span aria-hidden="true">&lsaquo;</span>
+                    <span class="sr-only">Previous Pager</span>
+                </a>
+            </li>
+        }
+        @for (int x = firstPage; x < Model.CurrentPage; ++x)
+        {
+            <li><a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@x">@x</a></li>
+        }
+        <li class="page-item active"><a class="page-link">@Model.CurrentPage</a></li>
+        @for (int x = Model.CurrentPage + 1; x <= lastPage; ++x)
+        {
+            <li><a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@x">@x</a></li>
+        }
+        @if (lastPage + 10 < Model.TotalPages)
+        {
+            <li>
+                <a asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@(lastPage + 10)" aria-label="Next Pager">
+                    <span aria-hidden="true">&rsaquo;</span>
+                    <span class="sr-only">Next Pager</span>
+                </a>
+            </li>
+        }
+        @if (Model.CurrentPage != Model.TotalPages)
+        {
+            <li>
+                <a aria-label="Last" asp-controller="@ViewBag.ControllerName" asp-action="Pager" asp-route-page="@Model.TotalPages">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Last</span>
+                </a>
+            </li>
+        }
+    </ul>
 </nav>
